<resources>
    <string name="app_name">SocialiTec</string>

    <string name="inicio_item">Inicio</string>
    <string name="grupos_item">Grupos</string>
    <string name="perfil_item">Perfil</string>
    <string name="configuracion_item">Configuración</string>
    <string name="mensajes_item">Mensajes</string>
    <string name="cerrar_sesion_item">Cerrar Sesión</string>

    <string name="user">Username:</string>
    <string name="pass">Password:</string>
    <string name="botonLogin">Login</string>
    <string name="botonRegistro">Registrar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_publicacion">PublicacionActivity</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cancelar_contrase_a">Cancelar</string>
    <string name="contrase_a_nueva">Contraseña nueva:</string>
    <string name="confirmar_correo">Contraseña actual:</string>


</resources>
