<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_user"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:hint="Introduzca su Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:textSize="20sp"
        android:id="@+id/et_pass"
        android:textAlignment="center"
        android:hint="Introduzca su PW"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/botonLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginRight="15dp"
         />

        <Button
            android:id="@+id/botonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/botonRegistro"
           />
    </LinearLayout>

</LinearLayout>
